# libetnaviv

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libetnaviv.pc.in  libfakedrm_etnaviv.pc.in
include/: etnaviv_drmif.h
src/: Makefile.am  drm.h  etna.c  etna.h  etna_bo.c  etna_bo.h  etna_drm_emu.c  etna_fb.c  etna_fb.h  etna_gpu.c  etna_internal.h  etna_pipe.c  etna_queue.c  etna_queue.h  etna_rs.c  etna_rs.h  etna_tex.c  etna_util.h  etnaviv_drmif.h  viv.c  viv.h  viv_internal.h  viv_profile.c  viv_profile.h  xf86atomic.h
